--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="myApp">
 <head>
 <title>Sergio B</title>
-  <link rel="stylesheet" type="text/css" href="./styles/reset.css">
-  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="./public/styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="./public/styles/styles.css">
 </head>
 <body ng-controller="ctrl">
   <header>
@@ -38,8 +38,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="crossorigin="anonymous"></script>
-<script src="./js/app.js"></script>
-<script src="./js/ctrl.js"></script>
-<script src="./js/service.js"></script>
+<script src="./public/js/app.js"></script>
+<script src="./public/js/ctrl.js"></script>
+<script src="./public/js/service.js"></script>
 </body>
 </html>
