--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="myApp">
 <head>
 <title>Sergio Barker</title>
-  <link rel="stylesheet" type="text/css" href="./reset.css">
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles/reset.css">
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body ng-controller="ctrl">
   <header>
