--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype HTML>
 <html ng-app="myApp">
 <head>
+  <meta charset="utf-8">
 <title>Sergio Barker</title>
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
