--- a/stuff/home.html
+++ b/stuff/home.html
@@ -8,6 +8,9 @@
     </div>
     <div id="skills" class="sec2">
       <h1>SKILLS</h1>
+      <div class="skillsbox">
+        <ul></ul>
+      </div>
     </div>
     <div id="projects" class="sec3">
       <h1>Projects</h1>
