--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body ng-controller="ctrl">
-  <header>
+  <header class="header">
     <div class="home"><h1>Home</h1></div>
     <div class="headeritems">
       <div id="page1" class="headeritem">
