--- a/home.html
+++ b/home.html
@@ -3,19 +3,19 @@
     <div class="back">
 
     </div> -->
-    <div id="about" class="sec1">
+    <div id="about" class="sec1 sec">
       <h1>About</h1>
     </div>
-    <div id="skills" class="sec2">
+    <div id="skills" class="sec2 sec">
       <h1>SKILLS</h1>
       <div class="skillsbox">
         <ul></ul>
       </div>
     </div>
-    <div id="projects" class="sec3">
+    <div id="projects" class="sec3 sec">
       <h1>Projects</h1>
     </div>
-    <div id="education" class="sec4">
+    <div id="education" class="sec4 sec">
       <h1>Education</h1>
     </div>
 
