--- a/index.html
+++ b/index.html
@@ -5,22 +5,37 @@
 <title>Sergio Barker</title>
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body ng-controller="ctrl">
-  <header class="header">
-    <div class="home"><h1>Home</h1></div>
+  <header class="header" id="headerNav">
+
+    <div class="home">
+
+      <h1>Home</h1>
+
+    </div>
+
     <div class="headeritems">
       <div id="page1" class="headeritem">
+        <a href="#about">
         <h2>About</h2>
+        </a>
       </div>
       <div id="page2" class="headeritem">
+        <a href="#skills">
         <h2>Skills</h2>
+        </a>
       </div>
       <div id="page3" class="headeritem">
+        <a href="#projects">
         <h2>Projects</h2>
+        </a>
       </div>
       <div id="page4" class="headeritem">
+        <a href="#education">
         <h2>Education</h2>
+        </a>
       </div>
     </div>
   </header>
@@ -39,8 +54,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/ctrl.js"></script>
 <script src="./js/service.js"></script>
+<script src="./js/jQuery.js"></script>
 </body>
 </html>
