--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<body ng-controller="ctrl">
+<body ng-controller="mainCtrl">
   <header class="header" id="headerNav">
 
     <div class="home">
@@ -55,8 +55,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="./js/app.js"></script>
-<script src="./js/ctrl.js"></script>
+<script src="./app.js"></script>
+<script src="./js/mainCtrl.js"></script>
 <script src="./js/service.js"></script>
 <script src="./js/jQuery.js"></script>
 </body>
