--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 </head>
 <body ng-controller="mainCtrl">
   <header class="header" id="headerNav">
 
-    <div class="home">
-
+    <a href="#top">
+      <div class="home">
       <h1>Home</h1>
-
-    </div>
+      </div>
+    </a>
 
     <div class="headeritems">
       <div id="page1" class="headeritem">
-        <a href="#about">
+        <a href="#top">
         <h2>About</h2>
         </a>
       </div>
