--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="headeritems">
       <div id="page1" class="headeritem">
-        <a href="#top">
+        <a href="#about">
         <h2>About</h2>
         </a>
       </div>
