--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </a>
       </div>
       <div id="page4" class="headeritem">
-        <a href="#education">
-        <h2>Education</h2>
+        <a href="#contact">
+        <h2>Contact</h2>
         </a>
       </div>
     </div>
