--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 </head>
 <body ng-controller="mainCtrl">
-  <nav class="header navbar navbar-inverse navbar-fixed-top" id="headerNav">
+  <nav class="header navbar navbar-inverse navbar-fixed-top" id="headerNav" style="background-color: #34495E;">
 
     <a href="#top">
       <div class="home">
