--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 <script src="./js/mainCtrl.js"></script>
 <script src="./js/service.js"></script>
 <script src="./js/jQuery.js"></script>
+<script src="./js/parallax.js"></script>
 </body>
 </html>
