--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <title>Sergio Barker</title>
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles/laptop.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body ng-controller="mainCtrl">
   <nav class="header navbar navbar-inverse navbar-fixed-top" id="headerNav" style="background-color: #34495E;">
