--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body ng-controller="mainCtrl">
-  <nav class="header navbar navbar-inverse navbar-fixed-top" id="headerNav" style="background-color: #34495E;">
+  <header class="navigation" id="headerNav" style="background-color: #34495E;">
 
     <a href="#top">
       <div class="home">
@@ -42,7 +42,7 @@
         </a>
       </div>
     </div>
-  </nav>
+  </header>
     <main>
       <!-- <div class="time">
       <script type="text/javascript">
