--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
 <title>Sergio Barker</title>
+  <link rel="icon" href="../styles/imgs/githubwhite.png" type="image/png" sizes="18x18">
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
   <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <link rel="stylesheet" type="text/css" href="./styles/laptop.css">
