--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body ng-controller="mainCtrl">
-  <header class="navigation" id="headerNav" style="background-color: #34495E;">
+  <header class="navigation" id="headerNav">
 
     <a href="#top">
       <div class="home">
@@ -23,22 +23,22 @@
 
     <div class="headeritems">
       <div id="page1" class="headeritem">
-        <a href="#about">
+        <a href="#about" style="text-decoration: none">
         <h2>About</h2>
         </a>
       </div>
       <div id="page2" class="headeritem">
-        <a href="#skills">
+        <a href="#skills" style="text-decoration: none">
         <h2>Skills</h2>
         </a>
       </div>
       <div id="page3" class="headeritem">
-        <a href="#projects">
+        <a href="#projects" style="text-decoration: none">
         <h2>Projects</h2>
         </a>
       </div>
       <div id="page4" class="headeritem">
-        <a href="#contact">
+        <a href="#contact" style="text-decoration: none">
         <h2>Contact</h2>
         </a>
       </div>
