--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 <script src="./js/service.js"></script>
 <script src="./js/jQuery.js"></script>
 <script src="./js/parallax.js"></script>
+<script src="./js/myparallax.js"></script>
 </body>
 </html>
