--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <title>Sergio Barker</title>
-  <link rel="icon" href="../styles/imgs/githubwhite.png" type="image/png" sizes="18x18">
+  <link rel="icon" href="../styles/imgs/maryland.png" type="image/png" sizes="18x18">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
