--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 <script src="https://use.fontawesome.com/7c1d739023.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
 <script src="./app.js"></script>
+<script src="./js/mainCtrl.js"></script>
 <script src="./js/jQuery.js"></script>
 <script src="./js/parallax.js"></script>
 </body>
