--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 <title>Sergio Barker</title>
-  <link rel="icon" href="./styles/imgs/maryland.png" type="image/png" sizes="18x18">
+  <!-- <link rel="icon" href="./styles/imgs/maryland.png" type="image/png" sizes="18x18"> -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" type="text/css" href="./styles/reset.css">
@@ -59,8 +59,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/7c1d739023.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
-<script src="./js/jQuery.js"></script>
 <script src="./js/app.js"></script>
+<script src="./js/jQuery.js"></script>
 <script src="./js/mainCtrl.js"></script>
 <script src="./js/parallax.js"></script>
 </body>
