--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 <script src="./js/jQuery.js"></script>
 <script src="./js/app.js"></script>
 <script src="./js/mainCtrl.js"></script>
-<script src="./js/parallax.js"></script>
+<!-- <script src="./js/parallax.js"></script> -->
 </body>
 </html>
