--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
 <head>
   <meta charset="utf-8">
-<title>Sergio Barker</title>
+<title>Sergio Barker | Web Developer</title>
   <link rel="icon" href="./styles/imgs/maryland.png" type="image/png" sizes="18x18">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
