--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <header class="navigation" id="headerNav">
 
     <a href="#top">
-      <div class="home">
+      <div class="home animated fadeIn">
       <h1>Home</h1>
       </div>
     </a>
 
-    <div class="headeritems">
+    <div class="headeritems animated fadeIn">
       <div id="page1" class="headeritem">
         <a href="#about" style="text-decoration: none">
         <h2>About</h2>
